# gsqlancer

./: .gitignore  README  go.mod  go.sum  makefile
cmd/: main.go
pkg/action/: action.go
pkg/config/: config.go
pkg/connection/: config.go  conn.go  db.go  tidb.go
pkg/connection/mockdb/: db.go
pkg/connection/realdb/: config.go  conn.go  db.go
pkg/errors/: erros.go
pkg/executor/: action.go  create_table.go  executor.go  executor_norec_tlp.go  executor_pgs.go  gen.go  global_statue.go  init.go  select_stmt.go  status.go
pkg/executor/internal/gendata/: generate_data_item.go
pkg/knownbugs/: dustbin.go
pkg/model/: col.go  column.go  meta.go  record.go  sql.go  table.go  variable.go
pkg/report/: report.go  reporter.go
pkg/sqlancer/: sqlancer.go
pkg/state/: tidb.go
pkg/transformer/: tlp.go  tlp_test.go  transform.go
pkg/types/: argument.go
pkg/util/: datatype.go  generator.go  logging.go  output.go  rand.go
pkg/util/logging/: config.go  logging.go  sqlancer_log.go  util.go
tools/ddltest/: BUILD.bazel  main.go  main_test.go
